{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 202,
  "lineage": "f6447cce-e649-d3ab-2486-a5f90380384f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dh-datapipeline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d527b8c289b4af7f",
            "arn": "arn:aws:ec2:eu-central-1:948550461295:instance/i-0d5e33f11efc14778",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dh-iam-role-profile",
            "id": "i-0d5e33f11efc14778",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dunnhumby-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080996875a60ba1d1",
            "private_dns": "ip-10-0-1-71.eu-central-1.compute.internal",
            "private_ip": "10.0.1.71",
            "public_ip": "3.71.105.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ad0f8116b131204",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00362317cec2e1ef3",
            "tags": {
              "Name": "dh-datapipeline"
            },
            "tags_all": {
              "Name": "dh-datapipeline"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c222220a9bc4460"
            ]
          },
          "dependencies": [
            "aws_security_group.dunnhumby-sg",
            "aws_subnet.dunnhumby-subnet",
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dh-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:948550461295:internet-gateway/igw-04fc39040c68729fc",
            "id": "igw-04fc39040c68729fc",
            "owner_id": "948550461295",
            "tags": {
              "Name": "dh-igw"
            },
            "tags_all": {
              "Name": "dh-igw"
            },
            "vpc_id": "vpc-012808262cdd7e6a2"
          },
          "dependencies": [
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dh-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:948550461295:route-table/rtb-05a66d26818e1be25",
            "id": "rtb-05a66d26818e1be25",
            "owner_id": "948550461295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fc39040c68729fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-012808262cdd7e6a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dh-igw",
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dh-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06be29c21fda74c50",
            "route_table_id": "rtb-05a66d26818e1be25",
            "subnet_id": "subnet-00362317cec2e1ef3"
          },
          "dependencies": [
            "aws_internet_gateway.dh-igw",
            "aws_route_table.dh-route_table",
            "aws_subnet.dunnhumby-subnet",
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dunnhumby-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:948550461295:security-group/sg-05c222220a9bc4460",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c222220a9bc4460",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dunnhumby-sg",
            "name_prefix": "",
            "owner_id": "948550461295",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dunnhumby-SG"
            },
            "tags_all": {
              "Name": "dunnhumby-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-012808262cdd7e6a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dunnhumby-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:948550461295:subnet/subnet-00362317cec2e1ef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00362317cec2e1ef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948550461295",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dunnhumby-subnet"
            },
            "tags_all": {
              "Name": "dunnhumby-subnet"
            },
            "vpc_id": "vpc-012808262cdd7e6a2"
          },
          "dependencies": [
            "aws_vpc.dunnhumby-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dunnhumby-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:948550461295:vpc/vpc-012808262cdd7e6a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f87037d729ad463b",
            "default_route_table_id": "rtb-06d2edbd2f9463529",
            "default_security_group_id": "sg-0b70027e496522cff",
            "dhcp_options_id": "dopt-0316bb888fe1af95e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-012808262cdd7e6a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d2edbd2f9463529",
            "owner_id": "948550461295",
            "tags": {
              "Name": "dunnhumby-vpc"
            },
            "tags_all": {
              "Name": "dunnhumby-vpc"
            }
          }
        }
      ]
    }
  ]
}